-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.1, 4.8.6, 5.3.0, 5.3.1
-
None
-
Windows XP 64bit
-
Qt4: 753321eb459d2c988d66cc6c8905d75a0ba769bb, Qt5: 100ed2e91ead45f59639ec6b8aad16e6752818c4
I'm getting an non deterministic crash in QtNetwork4.dll!QNetworkDiskCache::insert(...) Line 238
call stack:
00000000() QtCore4.dll!operator<<(QDebug dbg={...}, const QObject * o=0x15bde5e8) Line 3665 + 0x8 bytes C++ > QtNetwork4.dll!QNetworkDiskCache::insert(QIODevice * device=0x15bde5e8) Line 238 + 0x42 bytes C++ QtNetwork4.dll!QNetworkReplyImplPrivate::completeCacheSave() Line 459 C++ QtNetwork4.dll!QNetworkReplyImplPrivate::finished() Line 656 C++ QtNetwork4.dll!QNetworkAccessHttpBackend::replyFinished() Line 774 C++ QtNetwork4.dll!QNetworkReplyImplPrivate::handleNotifications() Line 360 C++ QtNetwork4.dll!QNetworkReplyImpl::event(QEvent * e=0x1c4dcc20) Line 867 + 0x8 bytes C++ QtGui4.dll!QApplicationPrivate::notify_helper(QObject * receiver=0x165bede8, QEvent * e=0x1c4dcc20) Line 4446 C++ QtGui4.dll!QApplication::notify(QObject * receiver=0x165bede8, QEvent * e=0x1c4dcc20) Line 4410 + 0x9 bytes C++ ntdll.dll!_RtlFreeHeap@12() + 0x7a bytes
the program crashes in QDebug operator<<(QDebug dbg, const QObject *o):
line 3665
dbg.nospace() << o->metaObject()->className() << '(' << (void *)o;
o->metaObject() causes the crash.
I guess the object "o" (device) no longer exists.
(first thought)
Is it possible that 2 files with the same url
were downloaded at the same time ?
and one of them ended downloading with an error ?
so
in the:
void QNetworkReplyImplPrivate::completeCacheSave()
it was deleted with:
networkCache()->remove(url);
and it deleted the second one ?
- relates to
-
QTBUG-39533 QtWebKit crashes with Flash (YouTube) on version 5.3
-
- Closed
-